# healthmonitor

./: .env.example  .gitignore  Cargo.toml  README.md  server.http
.github/workflows/: release.yml  test.yml
src/: cli.rs  client.rs  config.rs  main.rs  server.rs  status.rs
src/checks/: file_check.rs  mod.rs  plugin_manager.rs  url_check.rs
tests/: README.md  check_tests.rs  helpers.rs  server_tests.rs  status_tests.rs
