[package]
name = "healthmonitor"
version = "0.2.3"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
clap = { version = "4.5.30", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
reqwest = { version = "0.12.12", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["io-util", "macros", "rt", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["trace"] }

[dev-dependencies]
http-body-util = "0.1.2"
nix = { version = "0.29.0", features = ["signal"] }
regex = "1.11.1"
serial_test = "3.2.0"
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["process"] }
tower = "0.5.2"
wiremock = "0.6.3"
